<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include layout="@layout/toolbar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dimen_50dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_normal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/dimen_120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:fontFamily="@font/delight_script"
                    android:text="@string/string_flower_type"
                    android:textSize="@dimen/text_heading_size" />

                <Spinner
                    android:id="@+id/spinner_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/flower_arrays"
                    android:prompt="@string/flower_prompt" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_normal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/dimen_120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:fontFamily="@font/delight_script"
                    android:text="@string/string_radio"
                    android:textSize="@dimen/text_heading_size" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/string_yes" />

                    <RadioButton
                        android:id="@+id/radio_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/string_no"
                        android:checked="true" />
                </RadioGroup>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:fontFamily="@font/delight_script"
                android:text="@string/string_color"
                android:textSize="@dimen/text_heading_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_normal"
                android:background="@drawable/bg_corners"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/chk_red"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_red" />

                <CheckBox
                    android:id="@+id/chk_yellow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_yellow" />

                <CheckBox
                    android:id="@+id/chk_pink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_pink" />

                <CheckBox
                    android:id="@+id/chk_white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_white" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_normal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:fontFamily="@font/delight_script"
                    android:text="@string/string_quantity"
                    android:textSize="@dimen/text_heading_size" />

                <EditText
                    android:layout_width="@dimen/dimen_100dp"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/margin_normal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_5dp"
                    android:fontFamily="@font/delight_script"
                    android:text="@string/string_memo_text"
                    android:textSize="@dimen/text_heading_size" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/btn_flower_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/color_yellow"
            android:text="@string/string_order"
            android:textSize="@dimen/text_heading_size"
            android:textAllCaps="false"
            android:fontFamily="@font/hasta_girl"/>

        <Button
            android:id="@+id/btn_garden_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/color_accent_light"
            android:text="@string/string_list"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_heading_size"
            android:textAllCaps="false"
            android:fontFamily="@font/hasta_girl"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>